--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.3.0",
-    "react-native-svg": "^12.0.3"
+    "react-native-svg": "^12.0.3",
+    "styled-components": "^5.0.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
