--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@react-navigation/drawer": "^5.3.1",
     "@ui-kitten/metro-config": "^4.4.1",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
